--- a/os200/dlab-vm/index.html
+++ b/os200/dlab-vm/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-  
-  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-  <title>dlab-vm</title>
 
   
-</head><body>
+  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>dlab-vm</title></head><body>
 <h1 style="text-align: center;">OS200 Lab On VirutalBox<br>
 </h1>
 This extra-credit lab teaches you how to recreate the OS200 lab
@@ -15,7 +12,7 @@ image is VMDK format, so any hypervisor that supports VMDK can be used
 - such as VMware.<br>
 <h2>Step 1: Download and install Oracle VirtualBox</h2>
 <ol>
-  <li>Refer to <a href="http://trainer.edu.mirantis.com/reza/os100/install-test-VirtualBox/">these instructions</a> to download your platform specific installer from <a href="https://www.virtualbox.org/wiki/Downloads" target="_blank">Oracle</a> and install and test VirtualBox.</li>
+  <li>Refer to <a href="../../os100/install-test-VirtualBox/">these instructions</a> to download your platform specific installer from <a href="https://www.virtualbox.org/wiki/Downloads" target="_blank">Oracle</a> and install and test VirtualBox.</li>
   <li>Create (or make sure you have) three host-only networks available <br>
   </li>
 </ol>
@@ -58,6 +55,7 @@ Search for "/^sudo" and add NOPASSWD: before the last ALL - the line should look
   </ul>
 </ol>
 <br>
+
 
 
 </body></html>
