--- a/os200/db-creation/index.html
+++ b/os200/db-creation/index.html
@@ -1,11 +1,8 @@
 <h1>Convenience Script for MySql Database Creation</h1>
-</P>
-You can use <a href=http://trainer.edu.mirantis.com/reza/os200/db-creation/create-mysql-db-for.sh> this</a> script to quickly create and test your openstack databases:
-</P>
-wget http://trainer.edu.mirantis.com/reza/os200/db-creation/create-mysql-db-for.sh
-</P>
+<p></p>
+You can use <a href="create-mysql-db-for.sh">this script</a> to quickly create and test your openstack databases.<br><ol><li>Click the link and copy the script URL.</li><li>In your lab environment "wget &lt;copied URL&gt;"<br>ie. wget http://trainer.edu.mirantis.com/extra-credit/os200/db-creation/create-mysql-db-for.sh</li><li>
 chmod a+x ./create-mysql-db-for.sh
-</P>
-Usage: ./create-mysql-db-for &ltdbname&gt [optional-management-nic=eth0]
-</P>
+</li></ol><p></p>
+Usage: ./create-mysql-db-for &amp;ltdbname&gt; [optional-management-nic=eth0]
+<p></p>
 Example: ./create-mysql-db-for keystone
