Change one more link.

--- a/os200/fernet-tokens/index.html
+++ b/os200/fernet-tokens/index.html
@@ -23,6 +23,6 @@ openstack token issue
 <p></p>
 If your request fails, try using curl and see what the result is:
 <p></p>
-<a href="../../os100/token/v3-get-token-nocat.sh">./v3-get-token-nocat.sh</a> <a href="http://trainer.edu.mirantis.com/reza/os200/fernet-tokens/admin.admin.v3">admin.admin.v3</a>
+<a href="../../os100/token/v3-get-token-nocat.sh">./v3-get-token-nocat.sh</a> <a href="fernet-tokens/admin.admin.v3">admin.admin.v3</a>
 <p></p>
 
