--- a/os100/secure-vm/index.html
+++ b/os100/secure-vm/index.html
@@ -43,7 +43,7 @@ be executed by cloud-init because of the "#!" in the begining of it.:<br>
     openstack server create --image CirrosQcow --flavor 1 --nic net-id=private --nic net-id=dbnet --user-data fix-interfaces.txt web<br>
     <br>
   </li>
-  <li>Test you setup by loging in to both VMs and check network connectivity<br>
+  <li>Test your setup by loging in to both VMs and checking network connectivity<br>
     <br>
   </li>
 
